# Virtuoso-l

./: .bash_login  .env  .gitignore  .gitmodules  Cargo.toml  Cross.toml  IrButtons.txt  LICENSE  Makefile  acceleration.sh  app.py  autologin.sh  build.rs  build_gpio_local.sh  camera.py  config  config.toml  get_address.py  get_data.c  get_pin.c  get_pins.c  get_rc5.c  gpio_control.py  gpio_control_emu.py  gpio_install.sh  gpio_test.py  hardware_config.toml  history.txt  install_kivy.sh  install_libs.sh  kivy_config.py  load.bat  main.kv  main1920x360.kv  main1920x480.kv  manual.md  next_weapon.c  run.sh  run_cam.sh  send_btn.c  (+17 more)
V24m_splash/: V24m_splash.plymouth
armbian/: Cargo.toml  bananapi_m2z.sh  patch_bananapi_m2z.sh
armbian/linux_assets/: .bash_login
armbian/scripts/: bananapi_m2z.sh
armbian/src/: main.rs
armbian/userpatches/: customize-image.sh
assets/: convert.sh
device_configuration/1920x480/: run.sh
device_configurations/: sway_conf
device_configurations/1920x1080/: run.sh
device_configurations/1920x1080/splash/: Virtuoso.plymouth
device_configurations/1920x360/: armbianEnv.txt
device_configurations/1920x360/splash/: Virtuoso.plymouth
device_configurations/1920x480/: armbianEnv.txt
device_configurations/1920x480/splash/: Virtuoso_splash.plymouth
docker/: Dockerfile.armv7-unknown-linux-gnueabihf
image_build/: Makefile
image_build/src_1920x360_notouch/: 50-Virtuoso.conf  armbianEnv.txt  config.ini  config.sh
image_build/src_1920x360_notouch_novideo/: armbianEnv.txt  config.sh
image_build/src_1920x360_notouch_novideo/Virtuoso_splash1920x360/: Virtuoso_splash1920x360.plymouth
image_build/src_1920x480_notouch/: armbianEnv.txt  config.ini  config.sh
image_build/src_1920x480_notouch/Virtuoso_splash1920x480/: Virtuoso_splash1920x480.plymouth
image_build/src_1920x550_notouch/: 50-Virtuoso.conf  armbianEnv.txt  config.ini  config.sh
linux_assets/: .bash_login  setup.sh  sway_conf
linux_assets/.config/sway/: config
mockup/: Virtuoso.penpot
model_info/: 28_inch.py  8.8inch.py  dev.py
prorotypes/: colors.json
scripts/: acceleration.sh  apt_sources.sh  bootsplash.sh  build_armbian.sh  compile.sh  create_venv.sh  crossenv.sh  debug_run.sh  gstreamer_commands  install.sh  install_ffmpeg.sh  install_libs.sh  kivy_config.py  local_run.sh  make_release.sh  overlayroot  parse_colors.py  parse_svg.py  rotate_left.sh  rotate_normal.sh  rotate_x_conf.sh  setup.sh  setup_armbian.sh  setup_linux.sh  swap.sh  upload.sh  useful_commands  video_commands  x_conf_1920x360.sh
src/: Makefile_gpio  __layouts.rs  app.py  colors.rs  config.json  console_backend.rs  cyrano_server.rs  get_comment_metadata.sh  get_pin.c  get_rc5.c  gpio.rs  gpio_control.py  gpio_control_emu.py  gpio_frontend.rs  hw_config.rs  initial_setup.rs  layout_structure.rs  layouts.rs  legacy_backend.rs  main.rs  main1920x360_no_video.kv  main1920x480.kv  match_info.rs  model_info.py  modules.rs  port_manager.rs  recorder.sh  repeater.rs  send_pin.c  settings_menu.rs  slint_frontend.rs  static_vars.py  system_info.py  video_control.py  video_control_emu.py  virtuoso_config.rs  virtuoso_logger.rs
src/egui_frontend/: mod.rs  score.rs
src/gpio/: Makefile  get_pin.cpp  get_rc5.cpp  get_time.cpp  gpio_lib.cpp  gpio_lib.hpp  send_pin.cpp  send_rc5.cpp
src/gui_frontend/: colors.rs  layout_structure.rs  layouts.rs  mod.rs  shader.wgsl  widgets.rs
src/scripts/: .bash_login  debug_run.sh  install.sh  kill.sh  recorder.sh  setup.sh  start_ffmpeg.sh  start_script.sh  start_x.sh  video_cutter.sh
src/sdl_frontend/: auto_status.rs  colors.rs  layout_structure.rs  layouts.rs  led_repeater.rs  message.rs  mod.rs  passive_card.rs  passive_counter.rs  passive_indicator.rs  penalty_card.rs  period.rs  priority.rs  renderers.rs  score.rs  timer.rs  weapon.rs  widgets.rs
src/slint/: main.slint
src/template/: 1920x360.json  1920x360_gen.json  1920x360_no_video.json  1920x480.json  1920x480_gen.json  1920x550.json  1920x550_gen.json  Makefile  build.py  colors.json  template_main.kv  video_info.kv  video_player.kv
src/templates/: index.html
(+67 files in other folders)
