[package]
name = "Virtuoso-l"
version = "0.1.0"
edition = "2024"

[dependencies]
egui = { version = "0.32.0", default-features = false, optional = true }
eframe = { version = "0.32.0", default-features = false, features = [
    "glow",
    "wayland",
], optional = true }
gpio-cdev = { version = "0.4", optional = true }
serial = { version = "0.4.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"
slint = { version = "1.12.0", default-features = false, features = [
    "backend-winit",
    "renderer-femtovg",
    "compat-1-2",
    "std",
], optional = true }
postcard = { version = "1.1.2", features = ["use-std"], optional = true }
crc = { version = "3.3.0", optional = true }
egui_alignments = "0.3.4"

[build-dependencies]
zip = "4.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
glob = "0.3.2"
slint = { version = "1.12.0", default-features = false, features = [
    "backend-winit",
    "renderer-femtovg",
    "compat-1-2",
    "std",
], optional = true }

[features]
default = ["console_backend", "egui_frontend", "cyrano_server"]
legacy_backend = ["serial", "gpio-cdev"]
console_backend = []
cyrano_server = []
egui_frontend = ["eframe", "egui"]
slint_frontend = ["slint"]
video_recorder = []
gpio_frontend = ["gpio-cdev"]
repeater = ["serial", "crc", "postcard"]

[[bin]]
name = "Virtuoso"
path = "src/main.rs"
