[package]
name = "Virtuoso-l"
version = "0.1.0"
edition = "2024"
default-run = "Virtuoso"

[dependencies]
gpio-cdev = { version = "0.4", optional = true }
serial = { version = "0.4.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"
postcard = { version = "1.1.2", features = ["use-std"], optional = true }
crc = { version = "3.3.0", optional = true }
fontdue = { version = "0.9.3", optional = true }
once_cell = "1.21.3"
pnet = "0.35.0"
atomic-wait = "1.1.0"
pollster = { version = "0.4", optional = true }
winit = { version = "0.30.12", optional = true }
wgpu = { version = "26.0.1", optional = true }
glyphon = { version = "0.7.0", optional = true }
bytemuck = { version = "1.16", features = ["derive"], optional = true }

[build-dependencies]
zip = "4.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
glob = "0.3.2"

[features]
default = ["console_backend", "gui_frontend", "cyrano_server", "legacy_backend"]
legacy_backend = ["serial"]
legacy_backend_full = ["legacy_backend", "gpio-cdev"]
console_backend = []
cyrano_server = []
gui_frontend = ["pollster", "winit", "wgpu", "glyphon", "bytemuck"]
video_recorder = []
gpio_frontend = ["gpio-cdev"]
repeater = ["serial", "crc", "postcard"]
embeded_device = []

[[bin]]
name = "Virtuoso"
path = "src/main.rs"

[[bin]]
name = "initial_setup"
path = "src/initial_setup.rs"
